--- a/barclays_dp_uk/AccountConfig.json
+++ b/barclays_dp_uk/AccountConfig.json
@@ -1,5 +1,5 @@
 {
-  "UseEncryptedConfig":true,
+  "UseEncryptedConfig":false,
   "UseAndroidSpecificConfig":true,
   "UseIOSSpecificConfig":true,
 }
